[package]
name = "glycors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units=1
panic = "abort"

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
rayon = "1.8.0"
rand = "0.8.5"

[build-dependencies]
maturin = "0.11.0"
